<resources>
    <string name="app_name">CvTanitim</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_genel">Genel Bilgiler</string>
    <string name="menu_egitim">Sertifikalar</string>
    <string name="menu_deneyim">Deneyimler</string>
    <string name="menu_proje">Projeler</string>
    <string name="menu_kisisel">Kişisel Bilgiler</string>

</resources>